# cel-rust

./: .gitignore  Cargo.toml
cel/: .opt_log.txt  .prompt.txt  Cargo.toml  FUNCTION_HANDLE_DESIGN.md  perf.data
cel/benches/: batch_eval.rs  diagnostic.rs  extended.rs  function_dispatch.rs  score.rs  vm_compare.rs  wirefilter_compare.rs  wirefilter_mirrors.rs
cel/examples/: batch.rs  bench_exists.rs  bench_rule_patterns.rs  check_in_set.rs  check_size.rs  comprehensive_bench.rs  dispatch_cost.rs  dump_bytecode.rs  max_stack.rs  measure_memory.rs  quick_bench.rs  quick_bench2.rs  quick_bench3.rs  score.rs  test_reset.rs  value_bool_cost.rs  vs_wirefilter.rs
cel/src/: context.rs  env.rs  fast.rs  function_handle.rs  functions.rs  lib.rs  macros.rs  magic.rs  objects.rs  ser.rs
cel/src/common/: decls.rs
cel/src/common/ast/: mod.rs
cel/src/common/types/: timestamp.rs
cel/src/parser/: macros.rs  parser.rs
cel/src/vm/: bytecode.rs  compiler.rs  enum_filter.rs  fast_value.rs  filter_tree.rs  filter_tree_compiler.rs  mod.rs  range_set.rs  reg_bytecode.rs  reg_closure_vm.rs  reg_compiler.rs  reg_fast_vm.rs  reg_vm.rs  ruleset.rs  vm.rs
examples/: debug_test.rs
