[package]
name = "cel"
description = "A parser and interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/cel-rust/cel-rust"
version = "0.13.0"
authors = ["Clark McCauley <me@clarkmccauley.com>", "Alex Snaps <alex@wcgw.dev>"]
edition = "2021"
rust-version = "1.86.0"
license = "MIT"
categories = ["compilers"]

[dependencies]
antlr4rust = "0.5.2"
lazy_static = "1.5.0"
nom = "7.1.3"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde", "clock"], optional = true }
regex = { version = "1.10.5", optional = true }
serde = "1.0"
serde_json = { version = "1.0", optional = true }
base64 = { version = "0.22.1", optional = true }
bytes = { version = "1", optional = true }

thiserror = "1.0"
pastey = "0.2.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
serde_bytes = "0.11.14"
dhat = { version = "0.3.3" }

[[bench]]
name = "runtime"
harness = false

[[bench]]
name = "vm_compare"
harness = false

[features]
default = ["regex", "chrono"]
structs = []
bytes = ["dep:bytes"]
json = ["dep:serde_json", "dep:base64"]
regex = ["dep:regex"]
chrono = ["dep:chrono"]
dhat-heap = [ ] # if you are doing heap profiling
